--- a/csharp/Dockerfile
+++ b/csharp/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER jan@lernmoment.de
 #based on Dockerfile for official mono image
 
 RUN apt-get update \
-	&& apt-get install -y curl \
+	&& apt-get install -y curl zip \
 	&& rm -rf /var/lib/apt/lists/*
 
 RUN apt-key adv --keyserver pgp.mit.edu --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
